# Copyright (C) 2005-2011 MaNGOS <http://www.getmangos.com/>
# Copyright (C) 2008-2011 Trinity <http://www.trinitycore.org/>
# Copyright (C) 2010-2012 Project SkyFire <http://www.projectskyfire.org/>
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

add_subdirectory(mmaps_extractor)
add_subdirectory(extractor)
add_subdirectory(vmap3_assembler)
add_subdirectory(vmap3_extractor)